--- a/frontend/BlissVinFX/package.json
+++ b/frontend/BlissVinFX/package.json
@@ -20,11 +20,13 @@
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "matter-js": "^0.20.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calculator": "^0.5.2",
     "react-native-calendars": "^1.1306.0",
     "react-native-flags": "^1.0.0",
+    "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1"
   },
